--- a/zetasql-toolkit-bigquery/pom.xml
+++ b/zetasql-toolkit-bigquery/pom.xml
@@ -152,15 +152,15 @@
   <profiles>
     <profile>
       <id>default</id>
-      <dependencies>
-        <dependency>
-          <groupId>com.google.zetasql.toolkit</groupId>
-          <artifactId>zetasql-toolkit-core</artifactId>
-          <version>${zetasql.toolkit.version}</version>
-          <type>test-jar</type>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
+<!--      <dependencies>-->
+<!--        <dependency>-->
+<!--          <groupId>com.google.zetasql.toolkit</groupId>-->
+<!--          <artifactId>zetasql-toolkit-core</artifactId>-->
+<!--          <version>${zetasql.toolkit.version}</version>-->
+<!--          <type>test-jar</type>-->
+<!--          <scope>test</scope>-->
+<!--        </dependency>-->
+<!--      </dependencies>-->
       <activation>
         <activeByDefault>true</activeByDefault>
       </activation>
