--- a/zetasql-toolkit-spanner/pom.xml
+++ b/zetasql-toolkit-spanner/pom.xml
@@ -129,13 +129,13 @@
     <profile>
       <id>default</id>
       <dependencies>
-        <dependency>
-          <groupId>com.google.zetasql.toolkit</groupId>
-          <artifactId>zetasql-toolkit-core</artifactId>
-          <version>${zetasql.toolkit.version}</version>
-          <type>test-jar</type>
-          <scope>test</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--          <groupId>com.google.zetasql.toolkit</groupId>-->
+<!--          <artifactId>zetasql-toolkit-core</artifactId>-->
+<!--          <version>${zetasql.toolkit.version}</version>-->
+<!--          <type>test-jar</type>-->
+<!--          <scope>test</scope>-->
+<!--        </dependency>-->
       </dependencies>
       <activation>
         <activeByDefault>true</activeByDefault>
